--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ textarea:focus, input:focus, button:focus, li:focus, a:focus, select:focus, tags
 	outline: 0!important;
 	box-shadow: none!important;
 }
+.md-color-picker-clear{display: none!important;}
 a{
 	text-decoration: none!important;
 	color: #3F51B5!important;
@@ -13,26 +14,13 @@ a:hover{opacity: 0.8;}
 
 .main_scope{height: 100vh;}
 
-.left_scope{overflow: auto;}
-.left_scope-selectors{width: 100%;margin-bottom: 40px;}
-.left_scope-selectors > *{margin: 0px 20px;}
+.left_scope{overflow: auto;border-right: 1px solid #EEEEEE; background-color: #FAFAFA;}
+.left_scope-data{width: 100%;height: auto; text-align: center;padding-bottom: 500px;}
+.md-title{padding: 20px!important;}
 
-/*Item*/
-.element-item{
-  padding: 10px;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  margin: 10px;
-}
-.element-item:focus{
-  border: 1px solid #3F51B5;
-}
-
-.md-title{
-	padding: 40px;
-}
-
+/*md-card{width: 90%!important;}*/
+md-card-title{padding-bottom: 50px!important;}
+md-card-content{text-align: left!important;}
+.block1{width:100%;}
 
 .right_scope{overflow: hidden;}
-.right_scope-photo{width: 100%;}
